--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.9.23",
+    "readme-template-generator": "^0.9.11",
     "validator": "^13.9.0"
   },
   "scripts": {
